# mystore

./: .gitignore  mkdocs.yml  pyproject.toml  setup.cfg
docs/: index.md
myhdf5/: __init__.py  aggregate.py  appname.py  directory.py  exceptions.py  serializer.py  store.py
myhdf5/abc/: __init__.py  decorator.py  iterable.py  serializer.py
myhdf5/serializers/: __init__.py  impl.py
myhdf5/web/: web.py
tests/: conftest.py  test_aggregate.py  test_directory.py  test_serializer.py  test_store.py
