[tool.poetry]
name = "h5pyex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
keras = "^2.10.0"
tensorflow = "^2.10.0"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
sqlmodel = "^0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

